# Tally

./: .gitignore  AGENTS.md  BACKEND_SETUP_STATUS.md  FOLDER_STRUCTURE.md  FRONTEND_STRUCTURE.md  GETTING_STARTED.md  IMPLEMENTATION.md  README.md  SETUP.md  SETUP_ENV.md  START_BACKEND_NOW.md  TEST_DATA.sql  TEST_GUIDE.md
.loop/: GOAL.md  LOG.md
backend/: .env.example  STARTUP.md  database_schema.sql  fix-jwt-secret.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run.bat
backend/app/: __init__.py  main.py
backend/app/agents/: analytics_agent.py  base.py  categorization_agent.py  orchestrator.py  parsing_agent.py
backend/app/api/: accounts.py  categorization.py  chat.py  events.py  groups.py  insights.py  transactions.py  uploads.py  users.py
backend/app/core/: auth.py  config.py  database.py  openrouter_manager.py
backend/app/pipeline/: ingestion.py  ingestion_graph.py
backend/app/schemas/: accounts.py  chat.py  events.py  transactions.py  uploads.py  users.py
backend/app/services/: categorizer.py  chat_service.py  deduplicator.py  llm_client.py  merchant.py  parser.py  storage.py
backend/migrations/: 001_datapoints_and_storage.sql  002_transaction_groups.sql
backend/scripts/: seed_data.py
backend/tests/: test_chat_service.py  test_events.py
config/: docker-compose.yml
docs/: DEVELOPMENT.md  SETUP_COMPLETE.md
frontend/: dockerfile  package-lock.json  package.json
frontend/app/: client-layout.tsx  layout.tsx
frontend/hooks/: index.ts  useAuth.ts  useChat.ts  useTransactions.ts
frontend/styles/: globals.css
(+26 files in other folders)
